--- a/portfolio.html
+++ b/portfolio.html
@@ -8,27 +8,30 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <!-- Шапка сайту -->
     <header class="header">
-      <nav>
-        <a href="./index.html" class="logo link">Web<span class="spart-logo">Studio</span></a>
-
-        <ul class="site-nav list link">
-          <li class=""><a href="./index.html" class="site-nav-link link">Studio</a></li>
-          <li><a href="./portfolio.html" class="site-nav-link link">Portfolio</a></li>
-          <li><a href="" class="site-nav-link link">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <address class="address">
-        <ul class="auth-nav list">
-          <li><a href="mailto:info@devstudio.com" class="site-nav-link auth-nav-link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="site-nav-link auth-nav-link">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
+      <div class="container-header container">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo link">Web<span class="spart-logo">Studio</span></a>
+  
+          <ul class="site-nav list link">
+            <li class="item"><a href="./index.html" class="link">Studio</a></li>
+            <li class="item"><a href="./portfolio.html" class="link">Portfolio</a></li>
+            <li class="item"><a href="" class="link">Contacts</a></li>
+          </ul>
+        </nav>
+  
+        <address class="address">
+          <ul class="auth-nav list">
+            <li class="item"><a href="mailto:info@devstudio.com" class="auth-nav-link link">info@devstudio.com</a></li>
+            <li class="item"><a href="tel:+110001111111" class="auth-nav-link link">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     
@@ -37,95 +40,114 @@
 
       <!-- Фільтр -->
       <ul class="filter list">
-        <li>
+        <li class="item">
           <button type="button" class="filter-button">All</button>
         </li>
-        <li>
+        <li class="item">
           <button type="button" class="filter-button">Web Site</button>
         </li>
-        <li>
+        <li class="item">
           <button type="button" class="filter-button">App</button>
         </li>
-        <li>
+        <li class="item">
           <button type="button" class="filter-button">Design</button>
         </li>
-        <li>
+        <li class="item">
           <button type="button" class="filter-button">Marketing</button>
         </li>
       </ul>
 
       <!-- Роботи -->
 
-      <ul class="list work-list">
-        <li>
+      <ul class="container work-list list">
+        <li class="item">
           <a href="" class="work-list-example link">
             <img src="./images/work1.jpg" alt="work1" width="360"
-              height="300"/>
-            <h2 class="title">Banking App Interface Concept</h2>
-            <p class="text">App</p>
+              height="300" class="work-example-foto"/>
+            <div class="work-text">
+              <h2 class="title">Banking App Interface Concept</h2>
+              <p class="text">App</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="item">
           <a href="" class="work-list-example link">
             <img src="./images/work2.jpg" alt="work2" width="360"
-              height="300"/>
-            <h2 class="title">Cashless Payment</h2>
-            <p class="text">Marketing</p>
+              height="300" class="work-example-foto"/>
+            <div class="work-text">
+              <h2 class="title">Cashless Payment</h2>
+              <p class="text">Marketing</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="item">
           <a href="" class="work-list-example link">
             <img src="./images/work3.jpg" alt="work3" width="360"
-              height="300"/>
-            <h2 class="title">Meditaion App</h2>
-            <p class="text">App</p>
+              height="300" class="work-example-foto"/>
+            <div class="work-text">
+              <h2 class="title">Meditaion App</h2>
+              <p class="text">App</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="item">
           <a href="" class="work-list-example link">
             <img src="./images/work4.jpg" alt="work4" width="360"
-              height="300"/>
-            <h2 class="title">Taxi Service</h2>
-            <p class="text">Marketing</p>
+              height="300" class="work-example-foto"/>
+            <div class="work-text">
+              <h2 class="title">Taxi Service</h2>
+              <p class="text">Marketing</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="item">
           <a href="" class="work-list-example link">
             <img src="./images/work5.jpg" alt="work5" width="360"
-              height="300"/>
-            <h2 class="title">Screen Illustrations</h2>
-            <p class="text">Design</p>
+              height="300" class="work-example-foto"/>
+            <div class="work-text">
+              <h2 class="title">Screen Illustrations</h2>
+              <p class="text">Design</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="item">
           <a href="" class="work-list-example link">
             <img src="./images/work6.jpg" alt="work6" width="360"
-              height="300"/>
-            <h2 class="title">Online Courses</h2>
-            <p class="text">Marketing</p>
+              height="300" class="work-example-foto"/>
+            <div class="work-text">
+              <h2 class="title">Online Courses</h2>
+              <p class="text">Marketing</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="item">
           <a href="" class="work-list-example link">
             <img src="./images/work7.jpg" alt="work7" width="360"
-              height="300"/>
-            <h2 class="title">Instagram Stories Concept</h2>
-            <p class="text">Design</p>
+              height="300" class="work-example-foto"/>
+            <div class="work-text">
+              <h2 class="title">Instagram Stories Concept</h2>
+              <p class="text">Design</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="item">
           <a href="" class="work-list-example link">
             <img src="./images/work8.jpg" alt="work8" width="360"
-              height="300"/>
-            <h2 class="title">Organic Food</h2>
-            <p class="text">Web Site</p>
+              height="300" class="work-example-foto"/>
+            <div class="work-text">
+              <h2 class="title">Organic Food</h2>
+              <p class="text">Web Site</p>
+            </div>
           </a>
         </li>
-        <li>
+        <li class="item">
           <a href="" class="work-list-example link">
-            <img src="./images/work9.jpg" alt="work9" />
-            <h2 class="title">Fresh Coffee</h2>
-            <p class="text">Web Site</p>
+            <img src="./images/work9.jpg" alt="work9" width="360"
+              height="300" class="work-example-foto"/>
+            <div class="work-text">
+              <h2 class="title">Fresh Coffee</h2>
+              <p class="text">Web Site</p>
+            </div>
           </a>
         </li>
       </ul>
@@ -133,11 +155,15 @@
 
     <!-- Підвал -->
     <footer class="footer">
-       <a href="./index.html" class="logo link">Web<span class="spart-logo logo-footer">Studio</span></a>
-      <p class="text-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+       <div class="container">
+        <div class="container-footer">
+           <a href="./index.html" class="logo link">Web<span class="spart-logo logo-footer">Studio</span></a>
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.
+          </p>
+        </div >
+       </div>
     </footer>
   </body>
 </html>
