--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                   alt="monitor"
                   width="360"
                   height="300"
+                  class="img"
                 />
               </li>
               <li class="item">
@@ -101,6 +102,7 @@
                   alt="messenger"
                   width="360"
                   height="300"
+                  class="img"
                 />
               </li>
               <li class="item">
@@ -109,6 +111,7 @@
                   alt="phone"
                   width="360"
                   height="300"
+                  class="img"
                 />
               </li>
             </ul>
@@ -121,15 +124,17 @@
           <h2 class="section-title-team">Our Team</h2>
           <ul class="container-team list">
             <li class="item">
-              <img
-                src="./images/markguerrero.jpg"
-                alt="markguerrero"
-                width="264"
-                height="260"
-                class="foto"
-              />
-              <h3 class="title">Mark Guerrero</h3>
-              <p class="text">Product Designer</p>
+                <img
+                  src="./images/markguerrero.jpg"
+                  alt="markguerrero"
+                  width="264"
+                  height="260"
+                  class="foto img"
+                />
+                <div class="team-text">
+                  <h3 class="title">Mark Guerrero</h3>
+                  <p class="text">Product Designer</p>
+             </div >
             </li>
             <li class="item">
               <img
@@ -137,10 +142,12 @@
                 alt="tomford"
                 width="264"
                 height="260"
-                class="foto"
+                class="foto img"
               />
-              <h3 class="title">Tom Ford</h3>
-              <p class="text">Frontend Developer</p>
+              <div class="team-text">
+                <h3 class="title">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img
@@ -148,10 +155,12 @@
                 alt="camilagarcia"
                 width="264"
                 height="260"
-                class="foto"
+                class="foto img"
               />
-              <h3 class="title">Camila Garcia</h3>
-              <p class="text">Marketing</p>
+             <div class="team-text">
+                <h3 class="title">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+             </div >
             </li >
             <li class="item">
               <img
@@ -159,10 +168,12 @@
                 alt="danielwilson"
                 width="264"
                 height="260"
-                class="foto"
+                class="foto img"
               />
-              <h3 class="title">Daniel Wilson</h3>
-              <p class="text">UI Designer</p>
+              <div class="team-text">
+                <h3 class="title">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
